--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.1",
     "config": "^3.2.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.5",
     "request": "^2.88.0"
   },
